@@ -14,6 +14,8 @@ v0.9.2 (WIP):
 
     CHANGE: Canvas: Don't use deprecated SetItemAllowOverlap (#250)
 
+    CHANGE: Examples: Don't use deprecated SetItemAllowOverlap (#250)
+
     CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut
 
     CHANGE: Editor: Unary operator- for ImVec2 is defined by ImGui since r18955 (#248)
